# RESTaurant-test-assignment

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.mongo-debug.yml  docker-compose.yml  pyproject.toml
scripts/: docker_stop.sh
src/: config.py  main.py  metadata.py
src/db/: crud.py  db_connector.py  shemas.py
src/routes/: admin.py  crud.py  db.py  db_routes.py  mail.py  shemas.py  table.py  user.py
src/utils/: mail_handle.py  password.py
test_data/: tables.json  users.json
